--- a/proj24-todo-app-v1/src/components/Todos/TodoList.module.css
+++ b/proj24-todo-app-v1/src/components/Todos/TodoList.module.css
@@ -1,5 +1,7 @@
 .todoListContainer {
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding-top: 10px;
+  padding-left: 30%;
+  padding-right: 30%;
 }
